[gd_scene load_steps=4 format=3 uid="uid://cr6md325q0s7y"]

[ext_resource type="Script" path="res://scripts/global.gd" id="1_ns8u2"]
[ext_resource type="PackedScene" uid="uid://yochq87itm7n" path="res://scenes/blink_canvas.tscn" id="2_hhiff"]
[ext_resource type="PackedScene" uid="uid://cacrsub4xm8ki" path="res://scenes/map_canvas.tscn" id="3_qypii"]

[node name="Global" type="Node"]
script = ExtResource("1_ns8u2")

[node name="BlinkCanvas" parent="." instance=ExtResource("2_hhiff")]

[node name="BlinkTimer" type="Timer" parent="BlinkCanvas"]

[node name="MapCanvas" parent="." instance=ExtResource("3_qypii")]

[connection signal="timeout" from="BlinkCanvas/BlinkTimer" to="." method="_on_blink_timer_timeout"]
